--- a/package.json
+++ b/package.json
@@ -1,23 +1,11 @@
 {
-  "name": "blood-donation-system",
-  "version": "1.0.0",
-  "description": "Blood Donation and Management System with donor registration and search functionality",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": ["blood-donation", "healthcare", "mongodb", "express", "donor-management"],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.17.1"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
+    "cors": "^2.8.5"
   }
 }
